--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
 
 <body>
@@ -19,7 +18,8 @@
     <nav class="navbar">
       <a href="#home">Home</a>
       <a href="#skills">About me</a>
-      <a href="#gallery">Outside the Office</a>
+      <a href="#projects">Projects</a>
+      <a href="#gallery">Outside of Work</a>
     </nav>
   </header>
 
@@ -27,16 +27,21 @@
     <div class="home-content">
       <h1 class="bebas-neue-regular">Hi! I’m <span class="bebas-neue-regular">Laura</span></h1>
       <h3 class="bebas-neue-regular">
-        <span class="bebas-neue-regular">A curious mind with a love for web development</span>
+        <span class="bebas-neue-regular">A curious mind with a love for tech and web development</span>
       </h3>
       <p>I'm passionate about all things technology-related and constantly seek to expand my knowledge and skills.
         Whether it's exploring new programming languages, diving into web development,
         or experimenting with innovative tools, I thrive on learning and growing in this ever-evolving field.</p>
-    </div>
+        <a href="https://github.com/Lauraanni/" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-github icon-hover" style="font-size: 40px; color: #ffffff"></i>
+      </a>
+      </div>
+    
     </div>
     <div class="home-img">
       <img src="images/image.png" alt="">
     </div>
+   
   </section>
 
   <section class="skills" id="skills">
@@ -55,79 +60,114 @@
         As I move forward, I am excited to embrace new challenges, continuously learn, and grow within this dynamic
         industry. I look forward to making my mark in the IT world and pursuing my dreams.</p>
     </div>
-  
+
     <div class="tech-container">
       <h2>Some of the technologies I have experience with</h2>
       <div class="tech-icons">
         <div class="tech-item">
           <i class="devicon-react-original colored"></i>
-          <p>React</p>
         </div>
         <div class="tech-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
-          <p>Python</p>
         </div>
         <div class="tech-item">
           <i class="devicon-javascript-plain colored"></i>
-          <p>JavaScript</p>
         </div>
         <div class="tech-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
-          <p>HTML5</p>
         </div>
         <div class="tech-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original-wordmark.svg" />
-          <p>CSS</p>
         </div>
         <div class="tech-item">
           <i class="devicon-azuresqldatabase-plain"></i>
-          <p>SQL</p>
         </div>
         <div class="tech-item">
           <i class="devicon-azure-plain colored"></i>
-          <p>Azure</p>
         </div>
         <div class="tech-item">
           <i class="devicon-wordpress-plain colored"></i>
-          <p>WordPress</p>
         </div>
         <div class="tech-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
-          <p>GitHub</p>
         </div>
         <div class="tech-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/photoshop/photoshop-original.svg" />
-          <p>Photoshop</p>
         </div>
       </div>
     </div>
   </section>
   
 
+  <section class="projects" id="projects"></section>
+  <h2 class="projectsTitle">Here are some of my projects</h2>
+  <div class="projectdiv">
+    <button data-open-modal data-modal-video="images/react_nodejs_planthouse.mp4" style="border: none; background-color: #ffffff ">
+      <img class="projectimg" src="images/react.png" alt="React Project" />
+    </button>
+    <button data-open-modal data-modal-video="images/wordpressvideo.mp4" style="border: none; background-color: #ffffff ">
+      <img class="projectimg" src="images/wordpress.png" alt="WordPress Project" />
+    </button>
+    <button data-open-modal data-modal-video="images/reactnative.mp4" style="border:none; background-color: #ffffff ">
+      <img class="projectimg" src="images/reactnative.png" alt="React Native Project" />
+    </button>
+  </div>
 
-    <section class="gallery" id="gallery">
-      <div class="container">
+  <dialog data-modal style="margin: 5% auto; width: 80%; max-width: 900px; overflow: hidden;">
+    <div class="modal-content">
+      <button data-close-modal>&times;</button>
+      <video id="modal-video" controls width="100%" height="100%">
+        Your browser does not support the video tag
+      </video>
+    </div>
+  </dialog>
+
+
+
+  <section class="gallery" id="gallery">
+    <div class="container">
       <h2 class="bebas-neue-regular">About Me Outside the Office</h2>
 
-      <p> In my free time, I enjoy spending time outdoors with my dogs. 
-        I also have a passion for photography and I'm always capturing beautiful moments. 
-        I love going to the gym, playing video games, and reading books. 
+      <p> In my free time, I enjoy spending time outdoors with my dogs.
+        I also have a passion for photography and I'm always capturing beautiful moments.
+        I love going to the gym, playing video games, and reading books.
         I'm curious and constantly eager to learn new things.
       </p>
     </div>
-      <div class="gallery">
-        <img src="images/kuva1.jpg" alt="Image 1">
-        <img src="images/kuva2.jpg" alt="Image 2">
-        <img src="images/kuva3.jpg" alt="Image 3">
-        <img src="images/kuva4.jpg" alt="Image 4">
-        <img src="images/kuva5.jpg" alt="Image 5">
-        <img src="images/kuva6.jpg" alt="Image 6">
-        <img src="images/kuva7.jpg" alt="Image 7">
-        <img src="images/kuva8.jpg" alt="Image 8">
-        <img src="images/kuva9.jpg" alt="Image 9">
-      </div>
-    </section>
+    <div class="gallery">
+      <img src="images/kuva1.jpg" alt="Image 1">
+      <img src="images/kuva2.jpg" alt="Image 2">
+      <img src="images/kuva3.jpg" alt="Image 3">
+      <img src="images/kuva4.jpg" alt="Image 4">
+      <img src="images/kuva5.jpg" alt="Image 5">
+      <img src="images/kuva6.jpg" alt="Image 6">
+      <img src="images/kuva7.jpg" alt="Image 7">
+      <img src="images/kuva8.jpg" alt="Image 8">
+      <img src="images/kuva9.jpg" alt="Image 9">
+    </div>
+  </section>
 
+
+  <script>
+    const openButtons = document.querySelectorAll("[data-open-modal]");
+    const closeButton = document.querySelector("[data-close-modal]");
+    const modal = document.querySelector("[data-modal]");
+    const modalVideo = document.querySelector("#modal-video");
+
+   
+    openButtons.forEach((button) => {
+      button.addEventListener("click", () => {
+        const videoSrc = button.getAttribute("data-modal-video");
+        modalVideo.src = videoSrc; 
+        modal.showModal();
+      });
+    });
+
+    closeButton.addEventListener("click", () => {
+      modal.close();
+      modalVideo.src = ""; 
+    });
+  </script>
 </body>
 
 </html>
