--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <button data-open-modal data-modal-video="images/react_nodejs_planthouse.mp4" style="border: none; background-color: #ffffff ">
       <img class="projectimg" src="images/react.png" alt="React Project" />
     </button>
-    <button data-open-modal data-modal-video="images/wordpressvideo.mp4" style="border: none; background-color: #ffffff ">
+    <button data-open-modal data-modal-video="images/wordpress.mp4" style="border: none; background-color: #ffffff ">
       <img class="projectimg" src="images/wordpress.png" alt="WordPress Project" />
     </button>
     <button data-open-modal data-modal-video="images/reactnative.mp4" style="border:none; background-color: #ffffff ">
