--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Laura</title>
+  <title>Laura Ahonen</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,34 +30,36 @@
         <span class="bebas-neue-regular">A curious mind with a love for tech and web development</span>
       </h3>
       <p>I'm passionate about all things technology-related and constantly seek to expand my knowledge and skills.
-        Whether it's exploring new programming languages, diving into web development,
+        Whether it's exploring new programming languages, diving into web development
         or experimenting with innovative tools, I thrive on learning and growing in this ever-evolving field.</p>
-        <a href="https://github.com/Lauraanni/" target="_blank" rel="noopener noreferrer">
-          <i class="fa-brands fa-github icon-hover" style="font-size: 40px; color: #ffffff"></i>
+      <a href="https://github.com/Lauraanni/" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-github icon-hover" style="font-size: 40px; color: #ffffff"></i>
       </a>
-      </div>
-    
+    </div>
+
     </div>
     <div class="home-img">
       <img src="images/image.png" alt="">
     </div>
-   
   </section>
 
   <section class="skills" id="skills">
     <div class="skills-description">
       <h2>About me</h2>
-      <p>I am a final-year student of information technology, with a strong focus on programming, software testing,
-        artificial intelligence, and cybersecurity.<br><br> Throughout my studies, I have developed a
+      <p>I am a final-year student of information technology with a strong focus on programming, software testing,
+        artificial intelligence and cybersecurity.
+        <div style="height: 2rem; display: block;"></div>
+        <p> Throughout my studies, I have developed a
         solid foundation in various technologies, including JavaScript, HTML, CSS, React, React Native and WordPress.
-        Among these, I have particularly enjoyed working with React and JavaScript, as they allow for dynamic and
-        interactive web development.<br><br>
-        Over the past few years, I have gained valuable experience in the finance industry, where I have honed my
-        analytical and problem-solving skills. However, my true passion lies in the IT field, and I am eager to
-        transition into a career where I can fully express my creativity and technical expertise. My goal is to
-        contribute to innovative projects and collaborate with like-minded professionals who share my enthusiasm for
-        technology.<br><br>
-        As I move forward, I am excited to embrace new challenges, continuously learn, and grow within this dynamic
+        Among these, I have particularly enjoyed working with React, React Native and JavaScript, as they allow for dynamic and
+        interactive web development.
+        What fascinates me about programming is the limitless possibilities it offers; the ability to create anything I can imagine and seeing the results of my work is incredibly rewarding.</p>
+        <div style="height: 2rem; display: block;"></div>
+        <p>My background in the finance industry has helped me develop valuable analytical and problem-solving skills. I consider myself a determined problem solver, consistently ready to face challenges and seek out effective solutions.
+        However, my true passion lies in the IT field, and I am eager to
+        transition into a career where I can fully express my creativity, problem-solving skills and technical expertise. </p>
+        <div style="height: 2rem; display: block;"></div>
+        <p>I am excited to embrace new challenges, continuously learn and grow within this dynamic
         industry. I look forward to making my mark in the IT world and pursuing my dreams.</p>
     </div>
 
@@ -66,50 +68,61 @@
       <div class="tech-icons">
         <div class="tech-item">
           <i class="devicon-react-original colored"></i>
+          <span class="logo-name">React</span>
         </div>
         <div class="tech-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
+          <span class="logo-name">Python</span>
         </div>
         <div class="tech-item">
           <i class="devicon-javascript-plain colored"></i>
+          <span class="logo-name">JavaScript</span>
         </div>
         <div class="tech-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
+          <span class="logo-name">HTML</span>
         </div>
         <div class="tech-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original-wordmark.svg" />
+          <span class="logo-name">CSS</span>
         </div>
         <div class="tech-item">
           <i class="devicon-azuresqldatabase-plain"></i>
+          <span class="logo-name">SQL</span>
         </div>
         <div class="tech-item">
           <i class="devicon-azure-plain colored"></i>
+          <span class="logo-name">Azure</span>
         </div>
         <div class="tech-item">
           <i class="devicon-wordpress-plain colored"></i>
+          <span class="logo-name">Wordpress</span>
         </div>
         <div class="tech-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" />
+          <span class="logo-name">Github</span>
         </div>
         <div class="tech-item">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/photoshop/photoshop-original.svg" />
+          <span class="logo-name">Photoshop</span>
         </div>
       </div>
     </div>
   </section>
-  
+
 
   <section class="projects" id="projects"></section>
   <h2 class="projectsTitle">Here are some of my projects</h2>
   <div class="projectdiv">
-    <button data-open-modal data-modal-video="images/react_nodejs_planthouse.mp4" style="border: none; background-color: #ffffff ">
-      <img class="projectimg" src="images/react.png" alt="React Project" />
+    <button data-open-modal data-modal-video="images/react_nodejs_planthouse.mp4"
+      style="border: none; background-color: #ffffff ">
+      <img class="projectimg" src="images/reactproject.png" alt="React Project" />
     </button>
     <button data-open-modal data-modal-video="images/wordpress.mp4" style="border: none; background-color: #ffffff ">
-      <img class="projectimg" src="images/wordpress.png" alt="WordPress Project" />
+      <img class="projectimg" src="images/wordpressproject.png" alt="WordPress Project" />
     </button>
-    <button data-open-modal data-modal-video="images/reactnative.mp4" style="border:none; background-color: #ffffff ">
-      <img class="projectimg" src="images/reactnative.png" alt="React Native Project" />
+    <button data-open-modal data-modal-video="images/workoutapp.mp4" style="border:none; background-color: #ffffff ">
+      <img class="projectimg" src="images/workoutapp.png" alt="React Native Project" />
     </button>
   </div>
 
@@ -126,46 +139,45 @@
 
   <section class="gallery" id="gallery">
     <div class="container">
-      <h2 class="bebas-neue-regular">About Me Outside the Office</h2>
+      <h2 class="galleryTitle">About Me Outside the Office</h2>
 
-      <p> In my free time, I enjoy spending time outdoors with my dogs.
-        I also have a passion for photography and I'm always capturing beautiful moments.
-        I love going to the gym, playing video games, and reading books.
-        I'm curious and constantly eager to learn new things.
+      <p> In my free time, I spend a lot of time outdoors with my dogs. 
+        I also have a passion for photography and I'm always capturing beautiful moments. 
+        Being a little introverted person, I enjoy staying at home playing video games and reading books. I also like to go to the gym to stay active.
       </p>
     </div>
     <div class="gallery">
-      <img src="images/kuva1.jpg" alt="Image 1">
+      <img src="images/kuva6.jpg" alt="Image 1">
       <img src="images/kuva2.jpg" alt="Image 2">
       <img src="images/kuva3.jpg" alt="Image 3">
       <img src="images/kuva4.jpg" alt="Image 4">
       <img src="images/kuva5.jpg" alt="Image 5">
-      <img src="images/kuva6.jpg" alt="Image 6">
-      <img src="images/kuva7.jpg" alt="Image 7">
-      <img src="images/kuva8.jpg" alt="Image 8">
-      <img src="images/kuva9.jpg" alt="Image 9">
+      <img src="images/kuva1.jpg" alt="Image 6">
+      <img src="images/kuva8.jpg" alt="Image 7">
+      <img src="images/kuva7.jpg" alt="Image 8">
     </div>
   </section>
 
 
   <script>
+
     const openButtons = document.querySelectorAll("[data-open-modal]");
     const closeButton = document.querySelector("[data-close-modal]");
     const modal = document.querySelector("[data-modal]");
     const modalVideo = document.querySelector("#modal-video");
 
-   
+
     openButtons.forEach((button) => {
       button.addEventListener("click", () => {
         const videoSrc = button.getAttribute("data-modal-video");
-        modalVideo.src = videoSrc; 
+        modalVideo.src = videoSrc;
         modal.showModal();
       });
     });
 
     closeButton.addEventListener("click", () => {
       modal.close();
-      modalVideo.src = ""; 
+      modalVideo.src = "";
     });
   </script>
 </body>
