fix to font-size

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 
     <div class="projectdiv">
-      <h3 class="projectInfo">Here are some of my projects. Click on the images to watch the videos.</h3>
+      <h3 class="projectInfo">Here are some of my projects. Click on the images to watch the videos of the projects.</h3>
       <button data-open-modal data-modal-video="images/react_nodejs_planthouse.mp4"
         style="border: none; background-color: #ffffff">
         <img class="projectimg" src="images/planthousereact.png" alt="React Project" />
